k8s-yaml/mariadb.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: site
---

apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: site
spec:
  selector:
    app: mariadb
  ports:
    - name: mariadb-port
      protocol: TCP
      port: 3306
      targetPort: 3306
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: site
spec:
  selector:
    matchLabels:
      app: mariadb
  serviceName: mariadb
  replicas: 1
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.9.4
        imagePullPolicy: IfNotPresent
        ports:
        - name: mariadb-port
          containerPort: 3306
          protocol: TCP
        volumeMounts:
        - name: mariadb-data
          mountPath: /var/lib/mysql/
  volumeClaimTemplates:
  - metadata:
      name: mariadb-data
    spec:
      storageClassName: local-path
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
