k8s-yaml/wordpress.yaml

apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: site
spec:
  selector:
    app: wordpress
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP 
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
        labels:
          app: wordpress
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: wordpress
        image: wordpress:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: site
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: wp.onobrerodrigo.tech
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: wordpress
            port:
              number: 80
  tls:
    - hosts:
      - wp.onobrerodrigo.tech
      secretName: wp-onobrerodrigo-tech
status:
  loadBalancer:
    ingress:
    - hostname: 172.30.0.10
      ip: 172.30.0.10
---
